[package]
name = "rerank-rs"
version = "0.1.0"
description = "Local cross-encoder reranking library for Rust. Zero Python, zero API calls."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/rerank-rs"
keywords = ["reranking", "search", "nlp", "onnx", "retrieval"]
categories = ["science", "text-processing"]
readme = "README.md"
edition = "2024"

[lib]
name = "rerank"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.102"
criterion = "0.8.2"
ndarray = "0.17.2"
num_cpus = "1.17.0"
ort = "=2.0.0-rc.12"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0"
tantivy = "0.26.0"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1", features = ["full"] }
